Refactor templates into their own dirs

--- a/pkg/ui/templates/plants/index.html
+++ b/pkg/ui/templates/plants/index.html
@@ -1,3 +1,4 @@
+{{ define "plants/index.html" }}
 {{ template "header.html" . }}
 <table width="100%">
   <tr>
@@ -16,3 +17,4 @@
 {{ end }}
 </table>
 {{ template "footer.html" . }}
+{{ end }}
