Begin support for plant families

--- a/pkg/ui/templates/plants/index.html
+++ b/pkg/ui/templates/plants/index.html
@@ -3,6 +3,7 @@
 <table width="100%">
   <tr>
     <th>Name</th>
+    <th>Family</th>
     <th>Genus</th>
     <th>Species</th>
     <th>Common Name</th>
@@ -10,6 +11,7 @@
 {{ range .plants }}
   <tr>
     <td><a href="plants/{{ .ID }}">{{ .Name }}</a></td>
+    <td><a href="families/{{ .Family.ID }}">{{ .Family.Name }}</a></td>
     <td><a href="genus/{{ .Genus.ID }}">{{ .Genus.Name }}</a></td>
     <td>{{ .Species.Name }}</td>
     <td>{{ .CommonName }}</td>
