Start to build up the UI a bit more

--- a/pkg/ui/templates/common/menu.html
+++ b/pkg/ui/templates/common/menu.html
@@ -6,6 +6,9 @@
       <a class="navbar-brand" href="/">
         Home
       </a>
+      <a class="navbar-brand" href="/plants">
+        Plants
+      </a>
     </div>
   </div>
 </nav>
