Enable FullSaveAssociations to allow editing description Edit function properly identifies a plant Add fields to show page and edit form

--- a/pkg/ui/templates/plants/show.html
+++ b/pkg/ui/templates/plants/show.html
@@ -25,6 +25,14 @@
             <td>{{ .plant.Species.Name }}</td>
         </tr>
         <tr>
+            <td>SubSpecies</td>
+            <td>{{ .plant.SubSpecies }}</td>
+        </tr>
+        <tr>
+            <td>Variety</td>
+            <td>{{ .plant.Variety }}</td>
+        </tr>
+        <tr>
             <td>Flower Color</td>
             <td>{{ .plant.PlantDetail.FlowerColor }}</td>
         </tr>
