--- a/pkg/ui/templates/plants/form.html
+++ b/pkg/ui/templates/plants/form.html
@@ -1,22 +1,35 @@
 {{ define "plants/form.html" }}
 {{ template "header.html" . }}
 <form method="POST" action="/plants/create">
-  <div>
-	  <label for="familyname">Family:</label>
-	  <input type="text" placeholder="Family" name="familyname" id="familyname" value="{{ .plant.Family.Name }}">
-  </div>
-  <div>
-    <label for="genus">Genus:</label>
-    <input type="text" placeholder="Genus" name="genus" id="genus" value="{{ .plant.Genus.Name }}">
-  </div>
-  <div>
-    <label for="species">Species:</label>
-    <input type="text" placeholder="species" name="species" id="species" value="{{ .plant.Species.Name }}">
-  </div>
-  <div>
-	  <label for="commonname">Common Name:</label>
-	  <input type="text" placeholder="Common Name" name="commonname" id="commonname" value="{{ .plant.CommonName }}">
-  </div>
+  <table width="60%">
+    <tr>
+      <td><label for="familyname">Family:</label></td>
+      <td><input type="text" placeholder="Family" name="familyname" id="familyname" value="{{ .plant.Family.Name }}"></td>
+    </tr>
+    <tr>
+      <td><label for="genus">Genus:</label></td>
+      <td><input type="text" placeholder="Genus" name="genus" id="genus" value="{{ .plant.Genus.Name }}"></td>
+    </tr>
+    <tr>
+      <td><label for="species">Species:</label></td>
+      <td><input type="text" placeholder="species" name="species" id="species" value="{{ .plant.Species.Name }}"></td>
+    </tr>
+    <tr>
+      <td><label for="subspecies">Species:</label></td>
+      <td><input type="text" placeholder="subspecies" name="subspecies" id="subspecies" value="{{ .plant.SubSpecies }}"></td>
+    </tr>
+    <tr>
+      <td><label for="variety">Variety:</label></td>
+      <td><input type="text" placeholder="Variety" name="variety" id="variety" value="{{ .plant.Variety }}"></td>
+    </tr>
+    <tr>
+      <td><label for="commonname">Common Name:</label></td>
+      <td><input type="text" placeholder="Common Name" name="commonname" id="commonname" value="{{ .plant.CommonName }}"></td>
+    </tr>
+    <tr>
+      <td><label for="description">Description:</label></td>
+      <td><textarea name="description" id="description" rows="4" cols="50">{{ .plant.PlantDetail.Description }}</textarea></td>
+  </table>
   <div>
     <input type="SUBMIT">
   </div>
